--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,9 +98,10 @@ footer {
       background-color: black;
       background-image: linear-gradient(
           90deg, 
-            rgba(20, 19, 19, 0.945) 30%,
+            rgba(20, 19, 19, 0.945) 10%,
+            rgb(161, 23, 23) 20%,
             rgb(0, 0, 0, 0),
-            rgba(31, 28, 28, 0.945) 70%
+            rgba(31, 28, 28, 0.945) 90%
       ),
       url(../assets/images/earl-wilcox-y3W0CzO063w-unsplash-alt.jpg);
       object-fit: cover;
